Change README example for invalidate function to use OO syntax

--- a/README
+++ b/README
@@ -80,7 +80,7 @@ Delete a bucket:
 INVALIDATE
 
 Invalidate a path:
-	S3::invalidate($distributionId, $path);
+	$s3->invalidate($distributionId, $path);
 
 KNOWN ISSUES
 
